--- a/index.htm
+++ b/index.htm
@@ -88,16 +88,16 @@
                 <h4>Quick Links</h4>
                 <ul>
                     <li><a href="#" onclick="location.reload()">Home</a></li>
-                    <li><a href="https://github.com" target="_blank">GitHub</a></li>
-                    <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-                    <li><a href="https://linkedin.com" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://github.com/cjdreamy" target="_blank">GitHub</a></li>
+                    <li><a href="https://twitter.com/cjdreamy" target="_blank">Twitter</a></li>
+                    <li><a href="https://www.linkedin.com/in/joseph-constantine" target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
 
             <div class="footer-section">
                 <h4>Support</h4>
                 <p>Love helbCalc? Show your support! </p>
-                <a href="https://buymeacoffee.com" target="_blank" class="donation-btn">
+                <a href="https://buymeacoffee.com/cjdreamy" target="_blank" class="donation-btn">
                     ☕ Buy me a Coffee
                 </a>
                 <p class="donation-subtitle">Your support helps keep this project alive!</p>
