icons toogle scripts

--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
                 <div class="header-top">
                     <h1>Expenditure Tracker</h1>
                     <button class="dark-mode-toggle" id="darkModeToggle" title="Toggle Dark Mode">
-                        <span class="toggle-icon">🌙</span>
+                        <span class="toggle-icon"><img src="Assets/icons/dark.png" alt="Dark Mode" loading="lazy"></span>
                     </button>
                 </div>
                 <p>Keep track of your spending</p>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="action-buttons">
-                <button onclick="printTable()" class="btn-secondary">🖨️ Print Table</button>
+                <button onclick="printTable()" class="btn-secondary">Print Table</button>
             </div>
         </div>
     </div>
