--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
                 <div class="header-top">
                     <h1>Expenditure Tracker</h1>
                     <button class="dark-mode-toggle" id="darkModeToggle" title="Toggle Dark Mode">
-                        <span class="toggle-icon"><img src="Assets/icons/dark.png" alt="Dark Mode" loading="lazy"></span>
+                        <span class="toggle-icon"><img  class="icon" src="Assets/icons/dark.png" alt="Dark Mode" loading="lazy"></span>
                     </button>
                 </div>
                 <p>Keep track of your spending</p>
@@ -87,18 +87,42 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="#" onclick="location.reload()">Home</a></li>
-                    <li><a href="https://github.com/cjdreamy" target="_blank">GitHub</a></li>
-                    <li><a href="https://twitter.com/cjdreamy" target="_blank">Twitter</a></li>
-                    <li><a href="https://www.linkedin.com/in/joseph-constantine" target="_blank">LinkedIn</a></li>
+                    <li><a href="#" onclick="location.reload()"><span class="icon" aria-hidden="true"></span> Home</a></li>
+                    <li>
+                        <a href="https://github.com/cjdreamy" target="_blank" rel="noopener">
+                            <span class="icon" aria-hidden="true">
+                                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M12 .5a12 12 0 00-3.79 23.4c.6.11.82-.26.82-.58v-2.1c-3.34.73-4.04-1.6-4.04-1.6-.55-1.4-1.33-1.77-1.33-1.77-1.09-.75.08-.74.08-.74 1.2.09 1.84 1.24 1.84 1.24 1.07 1.83 2.8 1.3 3.48.99.11-.78.42-1.3.76-1.6-2.66-.3-5.46-1.33-5.46-5.93 0-1.31.47-2.38 1.24-3.22-.13-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 016 0c2.28-1.55 3.29-1.23 3.29-1.23.66 1.65.25 2.87.12 3.17.77.84 1.24 1.9 1.24 3.22 0 4.61-2.8 5.63-5.47 5.93.43.37.81 1.1.81 2.22v3.29c0 .32.21.7.82.58A12 12 0 0012 .5z"/></svg>
+                            </span>
+                            GitHub
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/cjdreamy" target="_blank" rel="noopener">
+                            <span class="icon" aria-hidden="true">
+                                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M22 4.01c-.64.28-1.33.48-2.05.57a3.6 3.6 0 001.58-1.98 7.2 7.2 0 01-2.28.87 3.6 3.6 0 00-6.14 3.28A10.2 10.2 0 013 3.15a3.6 3.6 0 001.11 4.8c-.53-.02-1.03-.16-1.47-.4v.04c0 1.7 1.21 3.12 2.82 3.45-.47.13-.97.16-1.48.06.42 1.32 1.63 2.28 3.06 2.31A7.22 7.22 0 012 19.54a10.2 10.2 0 005.5 1.61c6.6 0 10.2-5.48 10.2-10.23v-.47c.7-.5 1.3-1.12 1.78-1.83-.64.28-1.33.48-2.05.57z"/></svg>
+                            </span>
+                            Twitter
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/joseph-constantine" target="_blank" rel="noopener">
+                            <span class="icon" aria-hidden="true">
+                                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M4.98 3.5a2.88 2.88 0 11-.01 5.77 2.88 2.88 0 01.01-5.77zM3 9h4v12H3zM9 9h3.79v1.64h.05c.53-1 1.83-2.05 3.78-2.05 4.04 0 4.79 2.66 4.79 6.12V21H18v-5.4c0-1.29-.02-2.95-1.8-2.95-1.8 0-2.07 1.4-2.07 2.85V21H9V9z"/></svg>
+                            </span>
+                            LinkedIn
+                        </a>
+                    </li>
                 </ul>
             </div>
 
             <div class="footer-section">
                 <h4>Support</h4>
                 <p>Love helbCalc? Show your support! </p>
-                <a href="https://buymeacoffee.com/cjdreamy" target="_blank" class="donation-btn">
-                    ☕ Buy me a Coffee
+                <a href="https://buymeacoffee.com/cjdreamy" target="_blank" class="donation-btn" rel="noopener">
+                    <span class="icon" aria-hidden="true">
+                        <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M18 8h1a3 3 0 010 6h-1v1a3 3 0 01-3 3H8a3 3 0 01-3-3V8h13zM6 5h12v2H6zM9 3h6v2H9z"/></svg>
+                    </span>
+                    Buy me a Coffee
                 </a>
                 <p class="donation-subtitle">Your support helps keep this project alive!</p>
             </div>
