--- a/index.htm
+++ b/index.htm
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>helbCalc - Expenditure Tracker</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="Assets/images/hc_logo.png" type="image/png">
+    <link rel="shortcut icon" href="Assets/images/hc_logo.png" type="image/png">
 </head>
 <body>
     <div class="container">
         <div class="card">
             <div class="header">
                 <div class="header-top">
+                    <img src="Assets\images\hc_logo.png" alt="helbCalc logo" class="app-logo icon" loading="lazy">
                     <h1>Expenditure Tracker</h1>
                     <button class="dark-mode-toggle" id="darkModeToggle" title="Toggle Dark Mode">
-                        <span class="toggle-icon"><img  class="icon" src="Assets/icons/dark.png" alt="Dark Mode" loading="lazy"></span>
+                        <span class="toggle-icon"><img class="icon" src="assets/icons/dark.png" alt="Dark Mode" loading="lazy"></span>
                     </button>
                 </div>
                 <p>Keep track of your spending</p>
