--- a/index.htm
+++ b/index.htm
@@ -60,6 +60,7 @@
                         <tr>
                             <th>Item</th>
                             <th>Amount</th>
+                            <th class="no-print">Actions</th>
                         </tr>
                     </thead>
                     <tbody id="view">
