personalizatio of report

--- a/index.htm
+++ b/index.htm
@@ -39,6 +39,16 @@
                 </div>
             </div>
 
+            <div class="personalize-section no-print">
+                <div class="personal-inputs">
+                    <input type="text" id="reportTitle" class="input-field" placeholder="Report title (e.g., Monthly Budget Report)" />
+                    <input type="text" id="reportName" class="input-field" placeholder="Your name (appears on report)" />
+                </div>
+                <div class="personal-actions">
+                    <button id="savePersonal" class="btn-secondary">Save Personalization</button>
+                </div>
+            </div>
+
             <form id="form" class="form-section">
                 <div class="input_Wrapper">
                     <div class="input-group">
