personalize toogle show

--- a/index.htm
+++ b/index.htm
@@ -87,6 +87,7 @@
 
             <div class="action-buttons">
                 <button onclick="printTable()" class="btn-secondary">Print Table</button>
+                <button id="togglePersonalBtn" class="btn-secondary no-print">✏️ Personalize Report</button>
             </div>
         </div>
     </div>
