features comming soon, more icons

--- a/index.htm
+++ b/index.htm
@@ -86,8 +86,8 @@
             </div>
 
             <div class="action-buttons">
-                <button onclick="printTable()" class="btn-secondary">Print Table</button>
-                <button id="togglePersonalBtn" class="btn-secondary no-print">✏️ Personalize Report</button>
+                <button onclick="printTable()" class="btn-secondary btn-print">Print Table</button>
+                <button id="togglePersonalBtn" class="btn-secondary btn-personalize no-print">✏️ Personalize Report</button>
             </div>
         </div>
     </div>
@@ -140,6 +140,47 @@
                     Buy me a Coffee
                 </a>
                 <p class="donation-subtitle">Your support helps keep this project alive!</p>
+            </div>
+        </div>
+
+        <div class="coming-soon-section">
+            <h3>Coming Soon Features</h3>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon"><img class="iconx" src="Assets/icons/charts.png" alt="Interactive Charts" loading="lazy"></div>
+                    <h4>Interactive Charts</h4>
+                    <p>Visualize your spending with beautiful pie charts, bar graphs, and trend analysis</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon"><img class="iconx" src="Assets/icons/ai.png" alt="AI Insights" loading="lazy"></div>
+                    <h4>AI-Powered Insights</h4>
+                    <p>Get smart recommendations and tracking with AI to optimize your budget</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon"><img class="iconx" src="Assets/icons/mobile.png" alt="Mobile App" loading="lazy"></div>
+                    <h4>Mobile App</h4>
+                    <p>Track your expenses on the go with our dedicated mobile application</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon"><img class="iconx" src="Assets/icons/shared.png" alt="Shared Budgets" loading="lazy"></div>
+                    <h4>Shared Budgets</h4>
+                    <p>Collaborate with family and friends to manage shared expenses</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon"><img class="iconx" src="Assets/icons/cloudsync.png" alt="Cloud Sync" loading="lazy"></div>
+                    <h4>Cloud Sync</h4>
+                    <p>Seamlessly sync your data across all devices with cloud backup</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon"><img class="iconx" src="Assets/icons/alerts.png" alt="bell" loading="lazy"></div>
+                    <h4>Smart Alerts</h4>
+                    <p>Get notified when you're approaching your budget limits</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon"><img class="iconx" src="Assets/icons/dashboard.png" alt="dashboard" loading="lazy"></div>
+                    <h4>Interactive Dashboards</h4>
+                    <p>Intuitive and real-time dashboards to monitor your financial health at a glance</p>
+                </div>
             </div>
         </div>
 
