--- a/index.htm
+++ b/index.htm
@@ -87,7 +87,7 @@
 
             <div class="action-buttons">
                 <button onclick="printTable()" class="btn-secondary btn-print">Print Table</button>
-                <button id="togglePersonalBtn" class="btn-secondary btn-personalize no-print">✏️ Personalize Report</button>
+                <button id="togglePersonalBtn" class="btn-secondary btn-personalize no-print"><img class="icon" src="/Assets/icons/personalize.png" alt="pen" loading="lazy"> Personalize Report</button>
             </div>
         </div>
     </div>
