--- a/index.htm
+++ b/index.htm
@@ -103,6 +103,8 @@
                 <h4>Quick Links</h4>
                 <ul>
                     <li><a href="#" onclick="location.reload()"><span class="icon" aria-hidden="true"></span> Home</a></li>
+                     <li><a href="https://portal.hef.co.ke/auth/signin" target="_blank"><span  aria-hidden="true"></span> <img class="icon" src="Assets/icons/helblogo.png" alt="helb logo" loading="lazy">Helb Portal</a></li>
+                
                     <li>
                         <a href="https://github.com/cjdreamy" target="_blank" rel="noopener">
                             <span class="icon" aria-hidden="true">
